mobiel scroll issue fixed // overflow-x

--- a/src/assets/scss/components/_main.scss
+++ b/src/assets/scss/components/_main.scss
@@ -1,6 +1,6 @@
 main {
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
     @media screen and (max-width: $tablet) {
         margin-bottom: 5rem;
     }
